@@ -1,3 +1,9 @@
+2009-05-04  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/40015
+	* builtins.c (fold_builtin_memory_op): Do not decay to element
+	type if the size matches the whole array.
+
 2009-05-04  Kazu Hirata  <kazu@codesourcery.com>
 
 	* expmed.c (synth_mult): When trying out a shift, pass the result
